--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# House keeping"
+    "# Get the data ready"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[5 rows x 76 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,15 +596,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Data cleaning"
+    "#### Data labeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# day of week\n",
+    "dowdict = {1: 'Monday',\n",
+    "           2: 'Tuesday',\n",
+    "           3: 'Wednesday',\n",
+    "           4: 'Thursday',\n",
+    "           5: 'Friday',\n",
+    "           6: 'Saturday',\n",
+    "           7: 'Sunday'\n",
+    "           }\n",
+    "\n",
+    "collision['day_of_week'].replace(to_replace=[i for i in dowdict.keys()], \n",
+    "                                 value=[i for i in dowdict.values()],\n",
+    "                                 inplace=True)\n",
+    "\n",
+    "\n",
+    "# type of collision\n",
+    "tocdict = {'A': 'Head-On',\n",
+    "           'B': 'Sideswipe',\n",
+    "           'C': 'Rear End',\n",
+    "           'D': 'Broadside',\n",
+    "           'E': 'Hit Object',\n",
+    "           'F': 'Overturned',\n",
+    "           'G': 'Vehicle/Pedestrian',\n",
+    "           'H': 'Other',\n",
+    "           '-': 'Not Stated'\n",
+    "          }\n",
+    "\n",
+    "collision['type_of_collision'].replace(to_replace=[i for i in tocdict.keys()],\n",
+    "                                       value=[i for i in tocdict.values()],\n",
+    "                                       inplace=True)\n",
+    "\n",
+    "\n",
+    "# violation category \n",
+    "vcdict = {'0': 'Unknown',\n",
+    "          '1': 'Driving or Bicycling Under the Influence of Alcohol or Drug',\n",
+    "          '2': 'Impeding Traffic',\n",
+    "          '3': 'Unsafe Speed',\n",
+    "          '4': 'Following Too Closely',\n",
+    "          '5': 'Wrong Side of Road',\n",
+    "          '6': 'Improper Passing',\n",
+    "          '7': 'Unsafe Lane Change',\n",
+    "          '8': 'Improper Turning',\n",
+    "          '9': 'Automobile Right of Way',\n",
+    "          '10': 'Pedestrian Right of Way',\n",
+    "          '11': 'Pedestrian Violation',\n",
+    "          '12': 'Traffic Signals and Signs',\n",
+    "          '13': 'Hazardous Parking',\n",
+    "          '14': 'Lights',\n",
+    "          '15': 'Brakes',\n",
+    "          '16': 'Other Equipment',\n",
+    "          '17': 'Other Hazardous Violation',\n",
+    "          '18': 'Other Than Driver (or Pedestrian)',\n",
+    "          '19': None,\n",
+    "          '20': None,\n",
+    "          '21': 'Unsafe Starting or Backing',\n",
+    "          '22': 'Other Improper Driving',\n",
+    "          '23': 'Pedestrian or \"Other\" Under the Influence of Alcohol or Drug',\n",
+    "          '24': 'Fell Asleep',\n",
+    "          '- ': 'Not Stated'\n",
+    "          }\n",
+    "\n",
+    "collision['pcf_viol_category'].replace(to_replace=[i for i in vcdict.keys()],\n",
+    "                                       value=[i for i in vcdict.values()],\n",
+    "                                       inplace=True)\n",
+    "\n",
+    "\n",
+    "# colission severity \n",
+    "csdict = {0: 'Property Damage Only',\n",
+    "          1: 'Injury level 4: Fatal',\n",
+    "          2: 'Injury level 3: Severe',\n",
+    "          3: 'Injury level 2: Other Visible',\n",
+    "          4: 'Injury level 1: Complaint of Pain'\n",
+    "          }\n",
+    "\n",
+    "collision['collision_severity'].replace(to_replace=[i for i in csdict.keys()],\n",
+    "                                        value=[i for i in csdict.values()],\n",
+    "                                        inplace=True)\n",
+    "\n",
+    "\n",
+    "# "
+   ]
   },
   {
    "cell_type": "markdown",
