--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -43,6 +43,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"100%\" height=\"720\" frameborder=\"0\" src=\"https://chenliny1117.carto.com/builder/d36e8ca4-10a2-4cd7-8b39-41809f5c1d9d/embed\" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<iframe width=\"100%\" height=\"720\" frameborder=\"0\" src=\"https://chenliny1117.carto.com/builder/d36e8ca4-10a2-4cd7-8b39-41809f5c1d9d/embed\" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -7215,7 +7238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
