--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
    ],
    "source": [
     "%%HTML\n",
-    "<iframe width=\"100%\" height=\"720\" frameborder=\"0\" src=\"https://chenliny1117.carto.com/builder/d36e8ca4-10a2-4cd7-8b39-41809f5c1d9d/embed\" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>"
+    "# embed link"
    ]
   },
   {
