carto intro update

--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -39,7 +39,9 @@
     "reported traffic collisions in the City of Los Angeles from 2009 to 2018. This project includes an exploratory analysis on traffic collisions in the City of Los Angeles, aiming to answer questions such as:\n",
     "- when and where do collisions happen?\n",
     "- what are their risk factors?\n",
-    "- who are the victims?"
+    "- who are the victims?\n",
+    "\n",
+    "The [City of Los Angeles Data Portal](https://data.lacity.org/A-Safe-City/Traffic-Collision-Data-from-2010-to-Present/d5tf-ez2w) provides up-to-date collision data from 2010 to present, but with only basic attributes for each collision. Below is a visualziation using that dataset using Carto."
    ]
   },
   {
