carto intro update

--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -7211,7 +7211,7 @@
    "source": [
     "### Next steps:\n",
     "- continue identifying risk factors\n",
-    "- geocode each collision location\n",
+    "- geocode each collision location using Google Maps Geocoding API\n",
     "- bring in CartoFrame for spatial analysis\n",
     "- ..."
    ]
