carto intro update

--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -41,7 +41,7 @@
     "- what are their risk factors?\n",
     "- who are the victims?\n",
     "\n",
-    "The [City of Los Angeles Data Portal](https://data.lacity.org/A-Safe-City/Traffic-Collision-Data-from-2010-to-Present/d5tf-ez2w) provides up-to-date collision data from 2010 to present, but with only basic attributes for each collision. Below is a visualziation using that dataset using Carto."
+    "The [City of Los Angeles Data Portal](https://data.lacity.org/A-Safe-City/Traffic-Collision-Data-from-2010-to-Present/d5tf-ez2w) provides up-to-date collision data from 2010 to present, but with only basic attributes for each collision. Although not used in this project, I connected the dataset to Carto just to show a rough idea of what we are dealing with here."
    ]
   },
   {
