--- a/collision_exploratory_analysis_la.ipynb
+++ b/collision_exploratory_analysis_la.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Image used: [jupyter/datascience-notebook](https://hub.docker.com/r/jupyter/datascience-notebook/dockerfile) <br>\n",
+    "**For better experience, view this notebook in nbviewer [here](https://nbviewer.jupyter.org/github/chenliny/LA_Collision_Analysis/blob/master/collision_exploratory_analysis_la.ipynb)**<br>\n",
+    "\n",
+    "\n",
+    "Docker image used: [jupyter/datascience-notebook](https://hub.docker.com/r/jupyter/datascience-notebook/dockerfile) <br>\n",
     "\n",
     "\n",
     "To connect to a dockerized Jupyter server:  \n",
